# maestro_ws

install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
log/: latest_build  latest_list
src/data_collection/: package.xml  setup.py
src/data_collection/data_collection/: dataCollection.py
src/hand_pattern_recog/: CMakeLists.txt
src/hand_pattern_recog/include/hand_pattern_recog/: finger.h
src/hand_pattern_recog/src/: finger.cpp  hand_pattern_recog.cpp
src/log/: latest_list
src/plato_teleop/: CMakeLists.txt  package.xml
src/plato_teleop/launch/: controller_PlatoHand.py  controller_spaceMouse.py
src/plato_teleop/src/: controller_PlatoHand.cpp  controller_spaceMouse.cpp
src/spaceMouse_navigator/: package.xml  setup.cfg  setup.py
src/spaceMouse_navigator/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/spaceMouse_navigator/log/: latest_build  latest_list
src/spaceMouse_navigator/spaceMouse_navigator/: spaceMouse_motionTest.py  spaceMouse_publisher.py
trajectories/: Trajectries_trajectory_15-42-45.hdf5  Trajectries_trajectory_15-46-48.hdf5  Trajectries_trajectory_15-49-35.hdf5  Trajectries_trajectory_15-51-37.hdf5  Trajectries_trajectory_15-53-56.hdf5  Trajectries_trajectory_15-55-55.hdf5  Trajectries_trajectory_15-58-21.hdf5  Trajectries_trajectory_16-02-30.hdf5  Trajectries_trajectory_16-09-13.hdf5  Trajectries_trajectory_16-12-25.hdf5  Trajectries_trajectory_16-15-08.hdf5  Trajectries_trajectory_16-17-13.hdf5  Trajectries_trajectory_16-19-29.hdf5  multi2single.py
trajectories/log/: latest_list
(+81 files in other folders)
